--- a/_index.html
+++ b/_index.html
@@ -9,6 +9,30 @@
         <link href="https://cdn.jsdelivr.net/gh/smarttechmukesh/assets/css/tailwindcss_v3.1.6.min.css rel="stylesheet" type="text/css" />        
     <script src="https://cdn.jsdelivr.net/npm/grapesjs@0.20.1/dist/grapes.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/artf/grapesjs-plugin-export/dist/index.js"></script>
+     <script async='async' custom-element='amp-auto-ads' src='https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js'>
+</script><script src='https://unpkg.com/infinite-scroll@4/dist/infinite-scroll.pkgd.min.js'/>
+<!-- or --><meta content='d98fdab4e719d0b095a6a1dc9ba8f7c5' name='monetag'/>
+<script src='https://unpkg.com/infinite-scroll@4/dist/infinite-scroll.pkgd.js'/>
+   
+<script async='async' crossorigin='anonymous' src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4425439620082441'/>
+<meta content='ca-pub-4425439620082441' name='google-adsense-account'/><script async='async' src='https://www.google.com/adsense/search/ads.js'/>
+<!-- elemen head lainnya dari halaman Anda -->
+<script charset='utf-8' type='text/javascript'>
+(function(g,o){g[o]=g[o]||function(){(g[o][&#39;q&#39;]=g[o][&#39;q&#39;]||[]).push(
+  arguments)},g[o][&#39;t&#39;]=1*new Date})(window,&#39;_googCsa&#39;);
+</script>
+<meta content='Hy7qtsQoq9QpAK2wC6jsrFcStIapZCz9ClxydvdWwMI' name='google-site-verification'/><!-- Google tag (gtag.js) -->
+<script async='async' src='https://www.googletagmanager.com/gtag/js?id=G-12XG1VVJCG'/>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag(&#39;js&#39;, new Date());
+
+  gtag(&#39;config&#39;, &#39;G-12XG1VVJCG&#39;);
+</script>
+    
+    <!-- Google tag (gtag.js) -->
+    
     <style>
       body,
       html {
