--- a/_index.html
+++ b/_index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
   <head>
@@ -5,11 +6,10 @@
     <title>HTML Editor</title>
     <link href="https://cdn.jsdelivr.net/npm/grapesjs@0.20.1/dist/css/grapes.min.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.38.1/dist/full.css" rel="stylesheet" type="text/css" />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" type="text/css" /> -->
-        <link href="https://cdn.jsdelivr.net/gh/smarttechmukesh/assets/css/tailwindcss_v3.1.6.min.css rel="stylesheet" type="text/css" />        
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/grapesjs@0.20.1/dist/grapes.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/artf/grapesjs-plugin-export/dist/index.js"></script>
-     <script async='async' custom-element='amp-auto-ads' src='https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js'>
+    <script src="index.js"></script>
+   <script async='async' custom-element='amp-auto-ads' src='https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js'>
 </script><script src='https://unpkg.com/infinite-scroll@4/dist/infinite-scroll.pkgd.min.js'/>
 <!-- or --><meta content='d98fdab4e719d0b095a6a1dc9ba8f7c5' name='monetag'/>
 <script src='https://unpkg.com/infinite-scroll@4/dist/infinite-scroll.pkgd.js'/>
@@ -80,7 +80,7 @@
           canvas: {
             styles: [
               'https://cdn.jsdelivr.net/npm/daisyui@2.38.1/dist/full.css',
-              'https://cdn.jsdelivr.net/gh/smarttechmukesh/assets/css/tailwindcss_v3.1.6.min.css'
+              'https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css'
             ],
           },
           height: '100%',
@@ -88,7 +88,7 @@
           showOffsets: true,
           fromElement: true,
           noticeOnUnload: false,
-          plugins: ['grapesjs-plugin-export', 'grapesjs-daisyui-tailwind-html-editor'],
+          plugins: ['grapesjs-daisyui-tailwind-html-editor'],
           pluginsOpts: {
             'grapesjs-daisyui-tailwind-html-editor': { /* Test here your options  */ }
           },
